@@ -1,6 +1,7 @@
 AC_INIT(configure.in)
 CONFIG_RULES
 ET_RULES
+AC_CHECK_HEADERS(stdlib.h)
 V5_SHARED_LIB_OBJS
 SubdirLibraryRule([${OBJS}])
 V5_AC_OUTPUT_MAKEFILE
